made tests pass for assigning clocks